add: database sample configuration

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # http configuration
 HTTP_PORT=8000
+
+# database configurations
+MYSQL_HOST=user:pass@tcp(127.0.0.1:3306)/region?charset=utf8mb4&parseTime=True&loc=Local
